--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/mdb.css">
+    <link rel="stylesheet" href="sass/mdb.css">
 
 </head>
 
@@ -29,7 +29,7 @@
             <div class="full-bg-img flex-center">
                 <div class="container">
                     <ul>
-                        <li class="wow fadeInUp"><img src="img/venuslux_logo.png" class="img-fluid mx-auto d-block" alt="venus lux logo" width="<25></25>0px"></li>
+                        <li class="wow fadeInUp"><img src="img/venuslux_new_logo.png" class="img-fluid mx-auto d-block logo_venus_svg_hello_page" alt="venus lux logo" width="<25></25>0px"></li>
                         <li>
                             <h2 class="h2-responsive wow fadeInDown" data-wow-delay="0.2s">Uwaga! Strona zawiera treści erotyczne.</h2>
                         </li>
