--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
         <div class="container">
-            <a class="navbar-brand venus-logo-brand wow fadeInLeft" href="index.html"><img src="img/venuslux_logo.png" claheight="30" class="d-inline-block align-top" alt="Venus Lux Logo"></a>
+            <a class="navbar-brand venus-logo-brand wow fadeInLeft" href="index.html"><img src="img/venuslux_new_logo.png" claheight="30" class="d-inline-block align-top logo_venus_svg_main" alt="Venus Lux Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -95,7 +95,7 @@
             <div class="carousel-item active view hm-black-light venus-first-slide">
                 <!-- Caption -->
                 <div class="full-bg-img flex-center white-text">
-                    <ul class="animated fadeIn col-md-12">
+                    <ul class="animated fadeIn col-md-12 home-intro-venus">
                         <li>
                             <h1 class="h1-responsive">Poznaj osoby z Twojej okolicy</h1>
                         </li>
@@ -117,7 +117,7 @@
 
                 <!-- Caption -->
                 <div class="full-bg-img flex-center white-text">
-                    <ul class="animated fadeIn col-md-12">
+                    <ul class="animated fadeIn col-md-12 home-intro-venus">
                         <li>
                             <h1 class="h1-responsive">Poznaj pary z Twojej okolicy </h1>
                         </li>
@@ -139,7 +139,7 @@
 
                 <!-- Caption -->
                 <div class="full-bg-img flex-center white-text">
-                    <ul class="animated fadeIn col-md-12">
+                    <ul class="animated fadeIn col-md-12 home-intro-venus">
                         <li>
                             <h1 class="h1-responsive">Wyjątkowe randki w Twoim mieście</h1>
                         </li>
@@ -926,7 +926,7 @@
 
         <!--Call to action-->
         <div class="call-to-action">
-            <h4 class="mb-5"><img src="img/venuslux_logo.png" alt=""></h4>
+            <h4 class="mb-5"><img src="img/venuslux_new_logo.png" alt="" width="200px;"></h4>
             <ul>
                 <li>
                     <h5>Poznawaj nowe Panie każdego dnia! Zapisz się do newslettera</h5>
