--- a/page.html
+++ b/page.html
@@ -18,7 +18,7 @@
 
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/mdb.css">
+    <link rel="stylesheet" href="sass/mdb.css">
 
 </head>
 
@@ -27,7 +27,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar venus-non-transparent-nav">
         <div class="container">
-            <a class="navbar-brand venus-logo-brand wow fadeInLeft" href="index.html"><img src="img/venuslux_logo.png" claheight="30" class="d-inline-block align-top" alt="Venus Lux Logo"></a>
+            <a class="navbar-brand venus-logo-brand wow fadeInLeft" href="index.html"><img src="img/venuslux_new_logo.png" claheight="30" class="d-inline-block align-top" alt="Venus Lux Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -151,7 +151,7 @@
 
         <!--Call to action-->
         <div class="call-to-action">
-            <h4 class="mb-5"><img src="img/venuslux_logo.png" alt=""></h4>
+            <h4 class="mb-5"><img src="img/venuslux_new_logo.png" width="250px;" alt=""></h4>
             <ul>
                 <li>
                     <h5>Poznawaj nowe Panie każdego dnia! Zapisz się do newslettera</h5>
