--- a/oferty.html
+++ b/oferty.html
@@ -28,7 +28,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar venus-non-transparent-nav">
         <div class="container">
-            <a class="navbar-brand venus-logo-brand wow fadeInLeft" href="index.html"><img src="img/venuslux_logo.png" claheight="30" class="d-inline-block align-top" alt="Venus Lux Logo"></a>
+            <a class="navbar-brand venus-logo-brand wow fadeInLeft" href="index.html"><img src="img/venuslux_new_logo.png" claheight="30" class="d-inline-block align-top" alt="Venus Lux Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
